# leafergraph

./: .gitignore  AGENTS.md  README.md  omx-input.json  package.json  tsconfig.base.json  vite.config.base.ts  注意事项.md
templates/backend/python-openrpc-authority-template/: .gitignore  PYTHON_BACKEND_INTEGRATION.md  README.md  pyproject.toml
templates/backend/python-openrpc-authority-template/src/leafergraph_python_openrpc_authority_template/: __init__.py  entry.py
templates/backend/python-openrpc-authority-template/src/leafergraph_python_openrpc_authority_template/core/: __init__.py  bootstrap.py  document_diff.py  document_store.py  frontend_bundles.py  jsonrpc.py  openrpc_paths.py  operation_applier.py  protocol.py  runtime_controller.py  schema_runtime.py  (+1 more)
templates/backend/python-openrpc-authority-template/tests/: __init__.py  conformance_support.py  runtime_fixtures.py  test_conformance_assets.py  test_conformance_runner.py  test_generated_client.py  test_openrpc_contract.py  test_openrpc_paths.py  test_runtime.py  test_server.py
templates/backend/python-openrpc-authority-template/tools/: generate_from_openrpc.py
templates/python-backend-template/: README.md  pyproject.toml
templates/python-backend-template/src/leafergraph_python_backend_control_template/: __init__.py  entry.py
templates/python-backend-template/src/leafergraph_python_backend_control_template/core/: runtime.py
templates/python-backend-template/src/leafergraph_python_backend_control_template/transport/: server.py
templates/python-backend-template/tests/: test_runtime.py  test_server.py
(+586 files in other folders)
