[project]
name = "leafergraph-python-openrpc-authority-template"
version = "0.1.0"
description = "OpenRPC-first Python authority template for LeaferGraph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "websockets>=15.0.0,<16.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
